[Fix #33] Fix blurry text after animation on chrome

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -46,3 +46,7 @@ button {
   color: white;
 }
 
+.explanatory-notes-container {
+  display: var(--display);
+}
+
